NOJIRA: Fixing CSS for high contrast themes.

--- a/css/SubtitleWidget.css
+++ b/css/SubtitleWidget.css
@@ -1,12 +1,12 @@
-.fl-subtitle-mainWrap {
-    display: table-cell;
-}
-
 /* should be fixed */
 .fl-subtitle-panel-menu-tooltip{
     display: none;
 }
 
+.fl-subtitle-mainWrap {
+    display: table-cell;
+    width: 500px;
+}
 .fl-subtitle-panel-languages {
     position: absolute;
 }
@@ -148,6 +148,10 @@ div.fl-subtitle-widgetWrap, div.fl-subtitle-mainWrap, div.fl-subtitle-panel, div
     color: yellow !important;
     background-color: black !important;
 }
+.fl-theme-uio-by .fl-subtitle-panel-menu,
+.fl-theme-uio-bw .fl-subtitle-panel-menu {
+    text-shadow: none;
+}
 
 .fl-theme-uio-wb .fl-subtitle-panel-languages li a.fl-subtitle-panel-addSubtitle {
     background-image: url(../images/arrow-white.png);
@@ -175,6 +179,9 @@ div.fl-subtitle-widgetWrap, div.fl-subtitle-mainWrap, div.fl-subtitle-panel, div
     background-image: url(../images/arrow-black.png);
     color: black !important;
     background-color: white !important;
+}
+.fl-theme-uio-wb .fl-subtitle-panel-menu {
+    text-shadow: none;
 }
 
 .fl-theme-uio-yb .fl-subtitle-panel-languages li a.fl-subtitle-panel-addSubtitle {
@@ -208,4 +215,7 @@ div.fl-subtitle-widgetWrap, div.fl-subtitle-mainWrap, div.fl-subtitle-panel, div
     background-image: url(../images/arrow-black.png);
     color: black !important;
     background-color: yellow !important;
+}
+.fl-theme-uio-yb .fl-subtitle-panel-menu {
+    text-shadow: none;
 }
